--- a/vs.html
+++ b/vs.html
@@ -22,6 +22,26 @@
 
   <main>
     <h2>VS Strategy</h2>
+    <p>
+    The Alliance Duel VS is a challenge against an alliance from another server (or from the same server at lower levels). Spanning 6 days from Monday to Saturday, each day features a unique challenge where participants engage in activities to accumulate daily points, contributing to victory points.
+    </p>
+    <p>
+    Emerging victorious in daily challenges earns not only daily rewards but also culminates in final rewards. Additionally, individual performance during this challenge grants access to chests containing rewards and Valor badges.
+    </p>
+    <p>
+    These badges facilitate research development aimed at enhancing rewards and points for the Alliance Duel VS, obtainable solely through chest victories in the competition or purchase with cash.
+    </p>
+    <p>
+    Subsequent messages will delve into the specifics of each day. Note that the points awarded for each activity may vary slightly based on researches you conducted in the Technology Center’s “Alliance Duel” section.
+    </p>
+    <p>
+    To optimize rewards, it’s crucial to synchronize Alliance Duel VS actions with corresponding phases of the Arms Race. Avoid the urge to execute all actions at the Alliance Duel VS daily reset; each day will specify overlapping Arms Race phases.
+    </p>
+    <p>
+    ATTENTION: During server reset, for 5 minutes points are not awarded, first make sure the new duels vs day started going to the event detail page and only after that start doing the activities. (from Introduction/ https://www.lastwartutorial.com/duel-vs/  ... yes I didn't write all of this yapping).
+    </p>
+
+    
     <div class="VS">
       <img src="assets/images/tutorial1.jpg" alt="Tutorial 1">
       <p>How to improve your aiming skills.</p>
