--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="vs.html">VS strat</a></li>
         <li><a href="tuto.html">Tutorials</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a href="vs.html">VS strat</a></li>
         <li><a href="records.html">Records</a></li>
       </ul>
     </nav>
@@ -52,67 +52,93 @@
     
  
 
-    <!-- Team Members Section -->
-    <section id="team">
-      <h2>DA BOMBO TEAM</h2>
-      <table>
-        <thead>
+<!-- Team Members Section -->
+<section id="team">
+    <h2>DA BOMBO TEAM</h2>
+    <table>
+      <thead>
         <tr>
-            <th>NAME</th>
-            <th>ROLE</th>
-            <th id = rank >GRADE</th>
+          <th>NAME</th>
+          <th>ROLE</th>
+          <th id="rank">GRADE</th>
         </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Denny1981</td>
-            <td>LEADER</td>
-            <td id = r5>R5</td>
-          </tr>
-          <tr>
-            <td>Amuko</td>
-            <td>War Lord</td>
-            <td id = r4>R4</td>
-          </tr>
-          <tr>
-            <td>Hatee235</td>
-            <td>Recruiter</td>
-            <td id = r4>R4</td>
-          </tr>
-          <tr>
-            <td>Pns</td>
-            <td>Muse</td>
-            <td id = r4>R4</td>
-          </tr>
-          <tr>
-            <td>Kikirikii</td>
-            <td>Butler</td>
-            <td id = r4>R4</td>
-          </tr>
-          <tr>
-            <td>BOMBOCLAT OFFICIAL</td>
-            <td>Website Manager, DickHead</td>
-            <td id = r3>R3</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-    <!-- Schedule Section -->
-    <section id="schedule">
-      <h2>Weekly Tasks</h2>
-      <ul>
-        <li>Bombo MONDAY - VS - DAY 1</li>
-        <ol> RADAR </ol>
-        <li>Bombo TUESDAY - VS - DAY 2</li>
-        <li>Bombo WEDNESDAY - VS - DAY 3</li>
-        <li>Bombo THURSDAY - VS - DAY 4</li>
-        <li>Bombo FRIDAY - VS - DAY 5</li>
-        <li>Bombo SATURDAY - VS - DAY 6</li>
-        <li>Bombo SUNDAY - VACATIONS - Go drink</li>
-      </ul>
-    </section>
-  </main>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Denny1981</td>
+          <td>LEADER</td>
+          <td id="r5">R5</td>
+        </tr>
+        <tr>
+          <td>Amuko</td>
+          <td>War Lord</td>
+          <td id="r4">R4</td>
+        </tr>
+        <tr>
+          <td>Hatee235</td>
+          <td>Recruiter</td>
+          <td id="r4">R4</td>
+        </tr>
+        <tr>
+          <td>Pns</td>
+          <td>Muse</td>
+          <td id="r4">R4</td>
+        </tr>
+        <tr>
+          <td>Kikirikii</td>
+          <td>Butler</td>
+          <td id="r4">R4</td>
+        </tr>
+        <tr>
+          <td>BOMBOCLAT OFFICIAL</td>
+          <td>Website Manager, DickHead</td>
+          <td id="r3">R3</td>
+        </tr>
+  
+        <!-- Ajout des joueurs R4 -->
+        <tr><td>Angbar</td><td></td><td id="r4">R4</td></tr>
+        <tr><td>Feilipu</td><td></td><td id="r4">R4</td></tr>
+        <tr><td>Schl1ng</td><td></td><td id="r4">R4</td></tr>
+        <tr><td>8ASAP8</td><td></td><td id="r4">R4</td></tr>
+  
+        <!-- Ajout des joueurs R3 -->
+        <tr><td>zyx</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>sixten</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Jarmo22d</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Finn124</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>warrior999</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Tacker98</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>BSpencer</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>CJ55</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Helly Benny</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Trunks1</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>kruno Ri</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Aqqqaaa</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>QuickNic83</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Steve612</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Darre1990</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>SiegLinde200</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>mo213</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Dardar82</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>harrixon</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Chrischi GER</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Maikolly</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>balerka</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>reirenato</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Wakalakasaka</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>SV Waldhof 1907</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Simon the Great</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Fire 1702</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Tilli1982</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>mauergeko</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Franked</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>King of Color</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>ShadyLady90</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>Sabrina85</td><td></td><td id="r3">R3</td></tr>
+      </tbody>
+    </table>
+  </section>
+  
 
   <footer id="footer">
     Created by R3 BOMBOCLAT OFFICIAL
