--- a/vs.html
+++ b/vs.html
@@ -12,9 +12,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="vs.html">VS strat</a></li>
         <li><a href="tuto.html">Tutorials</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a href="vs.html">VS strat</a></li>
         <li><a href="records.html">Records</a></li>
       </ul>
     </nav>
@@ -41,7 +41,204 @@
     ATTENTION: During server reset, for 5 minutes points are not awarded, first make sure the new duels vs day started going to the event detail page and only after that start doing the activities. (from Introduction/ https://www.lastwartutorial.com/duel-vs/  ... yes I didn't write all of this yapping).
     </p>
 
-    
+    <!-- ######################### VS WEEK TAB ##########################""-->
+
+    <!-- Team Members Section -->
+    <section id="team">
+        <h2>WEEK ORGANISATION</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Optimization Bonus VS/Weapon Race</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+        }
+        th {
+            background-color: #4CAF50;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+<table>
+    <thead>
+        <tr>
+            <th>Day of the Week</th>
+            <th>Battle Bonus VS</th>
+            <th>Time Slot</th>
+            <th>Weapon Race Bonus</th>
+            <th>Keep Until Right Slot</th>
+            <th>Launch for Next Day</th>
+            <th>Save</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td rowspan="6">Monday</td>
+            <td rowspan="2">Tasks Radar + Drone Pieces + XP Heroes + Resource Collection</td>
+            <td>03h - 07h</td>
+            <td>Construction</td>
+            <td rowspan="2">Construction</td>
+            <td rowspan="2"></td>
+            <td rowspan="2">XP, Hero Fragment, Ticket, Recruitment, Drone Components</td>
+        </tr>
+        <tr>
+            <td>07h - 11h</td>
+            <td>Unit Progression</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>11h - 15h</td>
+            <td>Tech Research</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>15h - 19h</td>
+            <td>Drone Boost</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>19h - 23h</td>
+            <td>Hero</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>23h - 03h</td>
+            <td>Construction</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td rowspan="6">Tuesday</td>
+            <td rowspan="2">Gold Truck x1 + Secret Orange Mission + Building</td>
+            <td>03h - 07h</td>
+            <td>Hero</td>
+            <td rowspan="2">Construction without Gift -> 7h</td>
+            <td rowspan="2">Tech Research</td>
+            <td rowspan="2">Tasks Radar (from 14:00, help allies, save the rest) XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+        </tr>
+        <tr>
+            <td>07h - 11h</td>
+            <td>Construction</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>11h - 15h</td>
+            <td>Unit Progression</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>15h - 19h</td>
+            <td>Tech Research</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>19h - 23h</td>
+            <td>Drone Boost</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>23h - 03h</td>
+            <td>Hero</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td rowspan="6">Wednesday</td>
+            <td rowspan="2">Tech Research + Tasks Radar + Drone Components</td>
+            <td>03h - 07h</td>
+            <td>Construction</td>
+            <td rowspan="2"></td>
+            <td rowspan="2"></td>
+            <td rowspan="2">XP, Hero Fragment, Ticket, Recruitment, Drone Pieces</td>
+        </tr>
+        <tr>
+            <td>07h - 11h</td>
+            <td>Unit Progression</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>11h - 15h</td>
+            <td>Tech Research</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>15h - 19h</td>
+            <td>Drone Boost</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>19h - 23h</td>
+            <td>Hero</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>23h - 03h</td>
+            <td>Construction</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <td rowspan="6">Thursday</td>
+            <td rowspan="2">Recruitment + Fragments + XP Heroes + Hero Components</td>
+            <td>03h - 07h</td>
+            <td>Unit Progression</td>
+            <td rowspan="2">Construction, Tech Research, and Soldiers</td>
+            <td rowspan="2"></td>
+            <td rowspan="2">Tasks Radar (from 14:00, help allies, save the rest) XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+        </tr>
+        <tr>
+            <td>07h - 11h</td>
+            <td>Tech Research</td>
+        </tr>
+    </tbody>
+</table>
+
+</body>
+
+      </section>
+<!--
     <div class="VS">
       <img src="assets/images/tutorial1.jpg" alt="Tutorial 1">
       <p>How to improve your aiming skills.</p>
@@ -50,6 +247,7 @@
       <img src="assets/images/tutorial2.jpg" alt="Tutorial 2">
       <p>Mastering team strategies.</p>
     </div>
+-->
   </main>
 
   <footer id="footer">
