--- a/vs.html
+++ b/vs.html
@@ -74,7 +74,7 @@
             <th>Day of the Week</th>
             <th>Battle Bonus VS</th>
             <th>Time Slot</th>
-            <th>Weapon Race Bonus</th>
+            <th>Arms Race</th>
             <th>Keep Until Right Slot</th>
             <th>Launch for Next Day</th>
             <th>Save</th>
@@ -132,7 +132,7 @@
             <td rowspan="2">Gold Truck x1 + Secret Orange Mission + Building</td>
             <td>03h - 07h</td>
             <td>Hero</td>
-            <td rowspan="2">Construction without Gift -> 7h</td>
+            <td rowspan="2">Construction SS Gift -> 7h</td>
             <td rowspan="2">Tech Research</td>
             <td rowspan="2">Tasks Radar (from 14:00, help allies, save the rest) XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
         </tr>
@@ -218,20 +218,194 @@
             <td></td>
             <td></td>
         </tr>
+<!-- Thursday -->
+<tr>
+    <td rowspan="6">Thursday</td>
+    <td rowspan="2">Recruitment + Fragments + XP Heroes + Hero Components</td>
+    <td>03h - 07h</td>
+    <td>Unit Progression</td>
+    <td rowspan="2"></td>
+    <td rowspan="2">Tech Research, Soldiers</td>
+    <td rowspan="2">Radar Tasks (from 14:00, help allies, save the rest), Drone Pieces and Components</td>
+</tr>
+<tr>
+    <td>07h - 11h</td>
+    <td>Tech Research</td>
+</tr>
+<tr>
+    <td></td>
+    <td>11h - 15h</td>
+    <td>Drone Boost</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>15h - 19h</td>
+    <td>Hero</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>19h - 23h</td>
+    <td>Construction</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>23h - 03h</td>
+    <td>Unit Progression</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
 
-        <tr>
-            <td rowspan="6">Thursday</td>
-            <td rowspan="2">Recruitment + Fragments + XP Heroes + Hero Components</td>
-            <td>03h - 07h</td>
-            <td>Unit Progression</td>
-            <td rowspan="2">Construction, Tech Research, and Soldiers</td>
-            <td rowspan="2"></td>
-            <td rowspan="2">Tasks Radar (from 14:00, help allies, save the rest) XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
-        </tr>
-        <tr>
-            <td>07h - 11h</td>
-            <td>Tech Research</td>
-        </tr>
+<!-- Friday -->
+<tr>
+    <td rowspan="6">Friday</td>
+    <td rowspan="2">Radar Tasks + Construction + Techno + Soldiers</td>
+    <td>03h - 07h</td>
+    <td>Tech Research</td>
+    <td rowspan="2"></td>
+    <td rowspan="2">Construction SS Gift -> 15h, Trained Soldier -> 19h</td>
+    <td rowspan="2">XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+</tr>
+<tr>
+    <td>07h - 11h</td>
+    <td>Drone Boost</td>
+</tr>
+<tr>
+    <td></td>
+    <td>11h - 15h</td>
+    <td>Hero</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>15h - 19h</td>
+    <td>Construction</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>19h - 23h</td>
+    <td>Unit Progression</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>23h - 03h</td>
+    <td>Tech Research</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+
+<!-- Saturday -->
+<tr>
+    <td rowspan="6">Saturday</td>
+    <td rowspan="2">Gold Truck x1 + Secret Orange Mission + All Speed-Ups + Killing</td>
+    <td>03h - 07h</td>
+    <td>Drone Boost</td>
+    <td rowspan="2">Construction SS Gift -> 11h, Trained Soldier -> 15h</td>
+    <td rowspan="2">All-Day Attacks</td>
+    <td rowspan="2">XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+</tr>
+<tr>
+    <td>07h - 11h</td>
+    <td>Hero</td>
+</tr>
+<tr>
+    <td></td>
+    <td>11h - 15h</td>
+    <td>Construction</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>15h - 19h</td>
+    <td>Unit Progression</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>19h - 23h</td>
+    <td>Tech Research</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>23h - 03h</td>
+    <td>Drone Boost</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+
+<!-- Sunday -->
+<tr>
+    <td rowspan="6">Sunday</td>
+    <td rowspan="2">Warrior's Rest</td>
+    <td>03h - 07h</td>
+    <td>Hero</td>
+    <td rowspan="2"></td>
+    <td rowspan="2"></td>
+    <td rowspan="2">Radar Tasks (from 14:00, help allies, save the rest), XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+</tr>
+<tr>
+    <td>07h - 11h</td>
+    <td>Construction</td>
+</tr>
+<tr>
+    <td></td>
+    <td>11h - 15h</td>
+    <td>Unit Progression</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>15h - 19h</td>
+    <td>Tech Research</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>19h - 23h</td>
+    <td>Drone Boost</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td></td>
+    <td>23h - 03h</td>
+    <td>Hero</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+
     </tbody>
 </table>
 
