--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Team Play (TEP)</h1>
+    <h1>TeamPlay [TEP] - #854 - Beta Website</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -22,7 +22,8 @@
 
   <main>
     <section id="news">
-        <h2>Fell da Bombo spirit</h2>
+        <p> Feel free to give feedbacks, bugs and ideas to me (R3 BOMBOCLAT OFFICIAL)</p>
+        <h2>Feel da Bombo spirit</h2>
         
         <!-- Conteneur parent des deux carousels -->
         <div class="carousel-wrapper">
