--- a/vs.html
+++ b/vs.html
@@ -82,7 +82,7 @@
     </thead>
     <tbody>
         <tr>
-            <td rowspan="6">Monday</td>
+            <td rowspan="6" id="daye">Bombo Monday</td>
             <td rowspan="2">Tasks Radar + Drone Pieces + XP Heroes + Resource Collection</td>
             <td>03h - 07h</td>
             <td>Construction</td>
@@ -128,13 +128,13 @@
         </tr>
 
         <tr>
-            <td rowspan="6">Tuesday</td>
+            <td rowspan="6" id="dayo">Bombo Tuesday</td>
             <td rowspan="2">Gold Truck x1 + Secret Orange Mission + Building</td>
             <td>03h - 07h</td>
             <td>Hero</td>
             <td rowspan="2">Construction SS Gift -> 7h</td>
             <td rowspan="2">Tech Research</td>
-            <td rowspan="2">Tasks Radar (from 14:00, help allies, save the rest) XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+            <td rowspan="2">Tasks Radar (from 14:00, help allies, save the rest) XP, Hero Fragment, Recruitment Ticket, Drone Pieces and Components</td>
         </tr>
         <tr>
             <td>07h - 11h</td>
@@ -174,13 +174,13 @@
         </tr>
 
         <tr>
-            <td rowspan="6">Wednesday</td>
+            <td rowspan="6" id="daye">Bombo Wednesday</td>
             <td rowspan="2">Tech Research + Tasks Radar + Drone Components</td>
             <td>03h - 07h</td>
             <td>Construction</td>
             <td rowspan="2"></td>
             <td rowspan="2"></td>
-            <td rowspan="2">XP, Hero Fragment, Ticket, Recruitment, Drone Pieces</td>
+            <td rowspan="2">XP, Hero Fragment, Recruitment Ticket, Drone Pieces</td>
         </tr>
         <tr>
             <td>07h - 11h</td>
@@ -220,7 +220,7 @@
         </tr>
 <!-- Thursday -->
 <tr>
-    <td rowspan="6">Thursday</td>
+    <td rowspan="6" id="dayo">Bombo Thursday</td>
     <td rowspan="2">Recruitment + Fragments + XP Heroes + Hero Components</td>
     <td>03h - 07h</td>
     <td>Unit Progression</td>
@@ -267,13 +267,13 @@
 
 <!-- Friday -->
 <tr>
-    <td rowspan="6">Friday</td>
+    <td rowspan="6" id="daye">Bombo Friday</td>
     <td rowspan="2">Radar Tasks + Construction + Techno + Soldiers</td>
     <td>03h - 07h</td>
     <td>Tech Research</td>
     <td rowspan="2"></td>
     <td rowspan="2">Construction SS Gift -> 15h, Trained Soldier -> 19h</td>
-    <td rowspan="2">XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+    <td rowspan="2">XP, Hero Fragment, Recruitment Ticket, Drone Pieces and Components</td>
 </tr>
 <tr>
     <td>07h - 11h</td>
@@ -314,13 +314,13 @@
 
 <!-- Saturday -->
 <tr>
-    <td rowspan="6">Saturday</td>
+    <td rowspan="6" id="dayo">Bombo Saturday</td>
     <td rowspan="2">Gold Truck x1 + Secret Orange Mission + All Speed-Ups + Killing</td>
     <td>03h - 07h</td>
     <td>Drone Boost</td>
     <td rowspan="2">Construction SS Gift -> 11h, Trained Soldier -> 15h</td>
     <td rowspan="2">All-Day Attacks</td>
-    <td rowspan="2">XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+    <td rowspan="2">XP, Hero Fragment, Recruitment Ticket, Drone Pieces and Components</td>
 </tr>
 <tr>
     <td>07h - 11h</td>
@@ -361,13 +361,13 @@
 
 <!-- Sunday -->
 <tr>
-    <td rowspan="6">Sunday</td>
+    <td rowspan="6" id="daye">Bombo Sunday</td>
     <td rowspan="2">Warrior's Rest</td>
     <td>03h - 07h</td>
     <td>Hero</td>
     <td rowspan="2"></td>
     <td rowspan="2"></td>
-    <td rowspan="2">Radar Tasks (from 14:00, help allies, save the rest), XP, Hero Fragment, Ticket, Recruitment, Drone Pieces and Components</td>
+    <td rowspan="2">Radar Tasks (from 14:00, help allies, save the rest), XP, Hero Fragment, Recruitment Ticket, Drone Pieces and Components</td>
 </tr>
 <tr>
     <td>07h - 11h</td>
