--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <tr><td>8ASAP8</td><td></td><td id="r4">R4</td></tr>
   
         <!-- Ajout des joueurs R3 -->
-        <tr><td>zyx</td><td></td><td id="r3">R3</td></tr>
+        <tr><td>zyxッ</td><td></td><td id="r3">R3</td></tr>
         <tr><td>sixten</td><td></td><td id="r3">R3</td></tr>
         <tr><td>Jarmo22d</td><td></td><td id="r3">R3</td></tr>
         <tr><td>Finn124</td><td></td><td id="r3">R3</td></tr>
