--- a/records.html
+++ b/records.html
@@ -22,7 +22,35 @@
 
   <main>
     <h2>Record Board</h2>
-
+    <section id="team">
+        <h2>DA BOMBO TEAM</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>TOPIC</th>
+              <th>RECORD</th>
+              <th id="rank">PLAYER</th>
+            </tr>
+          </thead>
+          <tbody>
+                <tr>
+                <td>Digger</td>
+                <td>0.00s</td>
+                <td id="r5">player 1 </td>
+                </tr>
+                <tr>
+                <td>Firefighter</td>
+                <td>32</td>
+                <td id="r5">BOMBOCLAT</td>
+                </tr>
+                <tr>
+                <td>topic 3</td>
+                <td>0.00s</td>
+                <td id="r5">player 3 </td>
+                </tr>
+          </tbody>
+        </table>
+    </section>
   </main>
 
   <footer id="footer">
