--- a/requests.html
+++ b/requests.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team Play - Events</title>
+  <title>Team Play - Requests</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,18 +15,22 @@
         <li><a href="tuto.html">Tutorials</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="records.html">Records</a></li>
-        <li><a href="season2_strat.html">Season 2</a></li>
         <li><a href="requests.html">Requests</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h1>Events</h1>
-    <h2> WRITING IN PROGRESS</h2>
-    <div class="event">
-      <img src = "https://risibank.fr/cache/medias/0/1/163/16328/thumb.png" style="display: block; margin: auto;">
+    <h2>Website Requests</h2>
+    <div class="request">
+      <img src="https://risibank.fr/cache/medias/0/0/4/467/thumb.png" >
+      <p>Feel free to ask any requests (sections, paragraphs, images), </p>
     </div>
+    <div class="request">
+        <img src="https://risibank.fr/cache/medias/0/1/159/15903/thumb.png" >
+        <p>Or, send your BOMBO profile picture requests at :</p>
+        <button onclick="window.location.href='mailto:mateovtln@gmail.com'">Contact BOMBO</button>
+      </div>
 
   </main>
 
