--- a/vs.html
+++ b/vs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team Play - Tutorials</title>
+  <title>Team Play - VS Strategy Guide</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,12 +16,15 @@
         <li><a href="tuto.html">Tutorials</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="records.html">Records</a></li>
+        <li><a href="season2_strat.html">Season 2</a></li>
+        <li><a href="requests.html">Requests</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <h2>VS Strategy</h2>
+    <h1>VS Strategy</h1>
+    <h2> Introduction</h2>
     <p>
     The Alliance Duel VS is a challenge against an alliance from another server (or from the same server at lower levels). Spanning 6 days from Monday to Saturday, each day features a unique challenge where participants engage in activities to accumulate daily points, contributing to victory points.
     </p>
@@ -45,7 +48,7 @@
 
     <!-- Team Members Section -->
     <section id="team">
-        <h2>WEEK ORGANISATION</h2>
+        <h2>WEEKLY ORGANISATION</h2>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
