--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div id="overlay"></div>
+
+    <!-- Popup -->
+    <div id="popup">
+        <h2>Welcome to the #854 [Tep] Website ! 🎉</h2>
+        <p>Have a nice BOMBO Day.</p>
+        <button class="popup-button" onclick="closePopup()">OUI OUI BAGUETTE !</button>
+    </div>
   <header>
-    <h1>TeamPlay [TEP] - #854 - Beta Website</h1>
+    <h1>TeamPlay [TEP] - #854 - Beta Website : V 1.3.1</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -16,13 +24,15 @@
         <li><a href="tuto.html">Tutorials</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="records.html">Records</a></li>
+        <li><a href="season2_strat.html">Season 2</a></li>
+        <li><a href="requests.html">Requests</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <section id="news">
-        <p> Feel free to give feedbacks, bugs and ideas to me (R3 BOMBOCLAT OFFICIAL)</p>
+        <p> Feel free to give feedbacks, bugs and ideas to me (R3 BOMBOCLAT OFFICIAL) : <a href="requests.html">Requests</a> </p>
         <h2>Feel da Bombo spirit</h2>
         
         <!-- Conteneur parent des deux carousels -->
