--- a/records.html
+++ b/records.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team Play - Tutorials</title>
+  <title>Team Play - Records</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,6 +16,8 @@
         <li><a href="tuto.html">Tutorials</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="records.html">Records</a></li>
+        <li><a href="season2_strat.html">Season 2</a></li>
+        <li><a href="requests.html">Requests</a></li>
       </ul>
     </nav>
   </header>
